Proyecto_servicio_ws/ros2_ws/log/build_2026-05-07_21-29-01/mi_primer_paquete/stdout_stderr.log
running egg_info
creating ../../build/mi_primer_paquete/mi_primer_paquete.egg-info
writing ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/PKG-INFO
writing dependency_links to ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/dependency_links.txt
writing entry points to ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/entry_points.txt
writing requirements to ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/requires.txt
writing top-level names to ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/top_level.txt
writing manifest file '../../build/mi_primer_paquete/mi_primer_paquete.egg-info/SOURCES.txt'
reading manifest file '../../build/mi_primer_paquete/mi_primer_paquete.egg-info/SOURCES.txt'
writing manifest file '../../build/mi_primer_paquete/mi_primer_paquete.egg-info/SOURCES.txt'
running build
running build_py
creating /home/aldo/ros2_ws/build/mi_primer_paquete/build
creating /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib
creating /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete
copying mi_primer_paquete/CinematicaInversa.py -> /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete
copying mi_primer_paquete/3GDL.py -> /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete
copying mi_primer_paquete/cine_inver.py -> /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete
copying mi_primer_paquete/Respaldo.py -> /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete
copying mi_primer_paquete/clicked_point_a_juntas.py -> /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete
copying mi_primer_paquete/__init__.py -> /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete
copying mi_primer_paquete/punto_objetivo.py -> /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete
copying mi_primer_paquete/publicador_juntas_terminal.py -> /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete
running install
running install_lib
creating /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete
copying /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete/CinematicaInversa.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete
copying /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete/3GDL.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete
copying /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete/cine_inver.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete
copying /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete/Respaldo.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete
copying /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete/clicked_point_a_juntas.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete
copying /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete/__init__.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete
copying /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete/punto_objetivo.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete
copying /home/aldo/ros2_ws/build/mi_primer_paquete/build/lib/mi_primer_paquete/publicador_juntas_terminal.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete
byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/CinematicaInversa.py to CinematicaInversa.cpython-312.pyc
byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/3GDL.py to 3GDL.cpython-312.pyc
  File "/home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/CinematicaInversa.py", line 17
    xi = Matrix([T_0_p[0, 3],import rclpy
                             ^^^^^^
SyntaxError: invalid syntax

byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/cine_inver.py to cine_inver.cpython-312.pyc
byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/Respaldo.py to Respaldo.cpython-312.pyc
Sorry: IndentationError: expected an indented block after 'for' statement on line 123 (cine_inver.py, line 124)
byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/clicked_point_a_juntas.py to clicked_point_a_juntas.cpython-312.pyc
byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/__init__.py to __init__.cpython-312.pyc
byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/punto_objetivo.py to punto_objetivo.cpython-312.pyc
byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/publicador_juntas_terminal.py to publicador_juntas_terminal.cpython-312.pyc
running install_data
creating /home/aldo/ros2_ws/install/mi_primer_paquete/share/ament_index
creating /home/aldo/ros2_ws/install/mi_primer_paquete/share/ament_index/resource_index
creating /home/aldo/ros2_ws/install/mi_primer_paquete/share/ament_index/resource_index/packages
copying resource/mi_primer_paquete -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/ament_index/resource_index/packages
copying package.xml -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete
creating /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/launch
copying launch/display_2.launch.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/launch
copying launch/display.launch.py -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/launch
creating /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/urdf
copying urdf/prueba_2.urdf -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/urdf
copying urdf/robot.urdf -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/urdf
copying urdf/prueba.urdf -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/urdf
creating /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/urdf/Modelos_en_stl
copying urdf/Modelos_en_stl/Ensamblaje_base.stl -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/urdf/Modelos_en_stl
copying urdf/Modelos_en_stl/Ensamblaje_antebrazo.stl -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/urdf/Modelos_en_stl
copying urdf/Modelos_en_stl/Ensamblaje_brazo.stl -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/urdf/Modelos_en_stl
copying urdf/Modelos_en_stl/Ensamblaje_hombro.stl -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/urdf/Modelos_en_stl
creating /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/rviz
copying rviz/mi_robot.rviz -> /home/aldo/ros2_ws/install/mi_primer_paquete/share/mi_primer_paquete/rviz
running install_egg_info
Copying ../../build/mi_primer_paquete/mi_primer_paquete.egg-info to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete-0.0.0-py3.12.egg-info
running install_scripts
Installing clicked_point_a_juntas script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing publicador_juntas_terminal script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing publisher script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing punto_objetivo script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing subscriber script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing subscriber_2 script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing subscriber_inter script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
writing list of installed files to '/home/aldo/ros2_ws/build/mi_primer_paquete/install.log'
